logo size increased + Reduce spacing

--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,8 @@
   }
 
   .section-padding {
-    @apply py-16 md:py-20 lg:py-24;
+    /* Reduced vertical spacing between sections for a tighter layout */
+    @apply py-8 md:py-10 lg:py-12;
   }
 
   .container-custom {
