Required Minor Changes

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
-/* Custom Fonts */
-@font-face {
-  font-family: 'The Season';
-  src: url('https://fonts.cdnfonts.com/css/the-season') format('woff2');
-  font-weight: normal;
-  font-style: normal;
-}
+/* Remove external 'The Season' webfont to avoid 3rd-party failures and render-blocking */
 
 @font-face {
   font-family: 'Canva Sans';
